fix(console): align console input field height
align console input field height

--- a/packages/console/src/components/TextInput/index.module.scss
+++ b/packages/console/src/components/TextInput/index.module.scss
@@ -20,10 +20,6 @@
   background: var(--color-layer-1);
   font: var(--font-body-2);
 
-  &.large {
-    height: 44px;
-  }
-
   &.withIcon {
     display: flex;
     align-items: center;
